--- a/app/templates/status/payment/index.html
+++ b/app/templates/status/payment/index.html
@@ -388,49 +388,7 @@
                                                       <w:anchorlock/>
                                                       <v:textbox inset="0px,0px,0px,0px">
                                                          <center style="color:#ffffff; font-family:Georgia, serif; font-size:16px">
-                                                            <!
-                                    [endif]--><a
-                                      href="https://mitivelane-test.online{{ link }}"
-                                      style="
-                                        text-decoration: none;
-                                        display: inline-block;
-                                        color: #ffffff;
-                                        background-color: #3e79f7;
-                                        border-radius: 0px;
-                                        width: auto;
-                                        border-top: 1px solid #3e79f7;
-                                        font-weight: 400;
-                                        border-right: 1px solid #3e79f7;
-                                        border-bottom: 1px solid #3e79f7;
-                                        border-left: 1px solid #3e79f7;
-                                        padding-top: 5px;
-                                        padding-bottom: 5px;
-                                        font-family: Noto Serif, Georgia, serif;
-                                        font-size: 16px;
-                                        text-align: center;
-                                        mso-border-alt: none;
-                                        word-break: keep-all;
-                                      "
-                                      target="_blank"
-                                      ><span
-                                        style="
-                                          padding-left: 30px;
-                                          padding-right: 30px;
-                                          font-size: 16px;
-                                          display: inline-block;
-                                          letter-spacing: normal;
-                                        "
-                                        ><span
-                                          dir="ltr"
-                                          style="
-                                            word-break: break-word;
-                                            line-height: 32px;
-                                          "
-                                        >
-                                          See Post
-                                        </span></span
-                                      ></a
-                                    >
+                                                            <![endif]-->
                                     <!--[if mso]>
                                                          </center>
                                                       </v:textbox>
