--- a/app/templates/emails/email1/index.html
+++ b/app/templates/emails/email1/index.html
@@ -479,6 +479,7 @@
                                         <div class="f-fallback">
                                             <h1>Hi, {{to}}!</h1>
                                             <p>{{current_user_name}} invited you to his Organization</p>
+                                            <p>CODE: {{code}}</p>
                                             <!-- Action -->
                                             <table class="body-action" align="center" width="100%" cellpadding="0"
                                                 cellspacing="0" role="presentation">
